--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,22 @@
+/* font styles  */
+body {
+  font-family: 'Francois One', sans-serif;
+}
+
 /* universal styles */
 .heading {
-  border: solid red 1px;
   text-align: center;
   background-color: #191919;
   color: #e4e4e4;
-  padding: 10px 0;
-  margin-bottom: 10px;
-  font-size: 1.5em;
+  padding: 40px 0;
+  margin-bottom: 40px;
+  font-size: 2.3em;
+}
+
+.subheading {
+  font-size: .8em;
+  line-height: 1.5;
+  color: tomato;
 }
 
 /* Scoreboard */
@@ -18,33 +28,40 @@
 #scoreTitle {
   text-align: center;
   font-weight: bold;
-  font-size: 2em;
+  font-size: 2.2em;
 }
 
 .playerOne,
 .playerTwo,
 .vs {
-  border: solid red 1px;
   display: inline-block;
   background-color: #191919;
   color: #e4e4e4;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  font-size: 1.4em;
 }
 
 /* rock, paper and scissor objects */
+
+.select {
+  text-align: center;
+}
 
 .choices {
   background-color: #e4e4e4;
   color: #191919;
   display: inline-block;
   padding: 40px;
-  margin: 10px 20px;
+  margin: 40px 20px;
   border: solid #191919 1px;
   border-radius: 50%;
 }
 
 .choices:hover {
   cursor: pointer;
-  background-color: tomato;
+  background-color: #88bd34;
   transform: scale(1.1);
   transition-property: transform background-color;
   transition-duration: 0.2s;
@@ -53,4 +70,52 @@
 img {
   height: 70px;
   width: 70px;
+}
+
+/* Chatbox styles */
+.Chat_Section {
+  width: 50%;
+  height: 400px;
+  border: solid #191919 1px;
+  box-shadow: 1px 1px 10px #191919;
+  margin: auto;
+}
+
+#chatbox_title {
+  text-align: center;
+  background-color: #191919;
+  color: #e4e4e4;
+  font-size: 1.2em;
+  padding: 5px 0;
+}
+
+#chat {
+  width: 87%;
+  margin-left: 4px;
+  height: 35px;
+  border-radius: 5px;
+  border: none;
+  background-color: #e4e4e4;
+  font-size: 1em;
+  font-weight: bold;
+  margin-top: 5px;
+}
+
+#button {
+  border: none;
+  padding: 10px;
+  background-color: tomato;
+  font-weight: bold;
+  border-radius: 5px;
+  color: #fff;
+
+}
+
+#button:hover {
+  cursor: pointer;
+}
+
+.chat_data {
+  line-height: 1.3;
+  max-height: 350px;
 }
