--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ img {
 }
 
 #chat {
-  width: 87%;
+  width: 90%;
   margin-left: 4px;
   height: 35px;
   border-radius: 5px;
@@ -128,5 +128,6 @@ img {
 
 .chat_data {
   line-height: 1.3;
-  max-height: 350px;
+  height: 320px;
+  overflow: auto;
 }
